# archify

./: .gitignore  Cargo.toml  Note.md  README.md
data/: cacert.der
src/: arguments.rs  authentication.rs  database.rs  main.rs  spot_api.rs
