[package]
name = "archify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest 		= "^0.11.11"
futures 		= "^0.3"
tokio 			= {version = "^1.21.0", features = ["full"]}
serde_json		= "^1.0.85"
base64			= "^0.13.0"
serde 			= {version = "^1.0.144", features = ["derive"]}
tokio-postgres	= "^0.7.7"

[features]
proxy = []